--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>JS</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <!-- <script src="./index2.js"></script> -->
+    <script src="./index3.js"></script>
 </body>
 </html>
