--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./index2.js"></script> -->
-    <script src="./index3.js"></script>
+    <!-- <script src="./index3.js"></script> -->
+    <!-- <script src="./example5.js"></script> -->
+    <!-- <script src="./example5b.js"></script> -->
+    <!-- <script src="./multiplications.js"></script> -->
+    <script src="./arrays-objects.js"></script>
 </body>
 </html>
