Cicles For & Object DOM

--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
     <title>JS</title>
 </head>
 <body>
+    <h1 id="mainTitle" class="primera-clase"></h1>
+    <div id="myDiv">
+        <h2>Subtitle</h2>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit aspernatur, sint veritatis quasi eveniet assumenda hic neque laboriosam earum labore nesciunt est deserunt et id beatae aliquid qui voluptates perspiciatis!</p>
+            <br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et ea veniam nisi recusandae beatae praesentium nobis ex perferendis cupiditate nam facere reprehenderit autem fugit laudantium optio, aliquam dolore molestias eos.</p>
+        </div>
+    </div>
+
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./index2.js"></script> -->
     <!-- <script src="./index3.js"></script> -->
     <!-- <script src="./example5.js"></script> -->
     <!-- <script src="./example5b.js"></script> -->
     <!-- <script src="./multiplications.js"></script> -->
-    <script src="./arrays-objects.js"></script>
+    <!-- <script src="./arrays-objects.js"></script> -->
+    <script src="./dom.js"></script>
 </body>
 </html>
