ADD scripts on index

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- <script src="./example5b.js"></script> -->
     <!-- <script src="./multiplications.js"></script> -->
     <!-- <script src="./arrays-objects.js"></script> -->
-    <script src="./dom.js"></script>
+    <!-- <script src="./dom.js"></script> -->
+    <!-- <script src="./functions.js"></script> -->
+    <script src="ejercicios.js"></script>
 </body>
 </html>
