ADD example names lists -Desafio 6-

--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et ea veniam nisi recusandae beatae praesentium nobis ex perferendis cupiditate nam facere reprehenderit autem fugit laudantium optio, aliquam dolore molestias eos.</p>
         </div>
     </div>
+    <section id="sectionList">
+        <h3>Primer Integrante</h3>
+        <div id="list1">
+            <b>Primer Nombre</b>
+            <p>Pedro</p>
+            <b>Segundo Nombre</b>
+            <p></p>
+            <b>Primer Apellido</b>
+            <p>Sanchez</p>
+            <b>Segundo Apellido</b>
+            <p>Perez</p>
+        </div>
+        <h3>Segundo Integrante</h3>
+        <div id="list2">
+            <b>Primer Nombre</b>
+            <p>Ana</p>
+            <b>Segundo Nombre</b>
+            <p>María</p>
+            <b>Primer Apellido</b>
+            <p>Rodriguez</p>
+            <b>Segundo Apellido</b>
+            <p></p>
+        </div>
+    </section>
 
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./index2.js"></script> -->
@@ -26,6 +50,7 @@
     <!-- <script src="./arrays-objects.js"></script> -->
     <!-- <script src="./dom.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
-    <script src="ejercicios.js"></script>
+    <!-- <script src="ejercicios.js"></script> -->
+    <script src="examples-names.js"></script>
 </body>
 </html>
