--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1 id="mainTitle" class="primera-clase"></h1>
@@ -40,6 +41,10 @@
             <p></p>
         </div>
     </section>
+    <section>
+        <h4>Eventos con botones</h4>
+        <button id="btn-dinamic" class="btn-dinamic" onclick="changeBtnColor()">Cambiame el color</button>
+    </section>
 
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./index2.js"></script> -->
@@ -51,6 +56,7 @@
     <!-- <script src="./dom.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
     <!-- <script src="ejercicios.js"></script> -->
-    <script src="examples-names.js"></script>
+    <!-- <script src="examples-names.js"></script> -->
+    <script src="events.js"></script>
 </body>
 </html>
