CREATE js folder

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
         <button id="btn-dinamic" class="btn-dinamic" onclick="changeBtnColor()">Cambiame el color</button>
     </section>
 
-    <!-- <script src="./index.js"></script> -->
-    <!-- <script src="./index2.js"></script> -->
-    <!-- <script src="./index3.js"></script> -->
-    <!-- <script src="./example5.js"></script> -->
-    <!-- <script src="./example5b.js"></script> -->
-    <!-- <script src="./multiplications.js"></script> -->
-    <!-- <script src="./arrays-objects.js"></script> -->
-    <!-- <script src="./dom.js"></script> -->
-    <!-- <script src="./functions.js"></script> -->
-    <!-- <script src="ejercicios.js"></script> -->
-    <!-- <script src="examples-names.js"></script> -->
-    <script src="events.js"></script>
+    <!-- <script src="./js/index.js"></script> -->
+    <!-- <script src="./js/index2.js"></script> -->
+    <!-- <script src="./js/index3.js"></script> -->
+    <!-- <script src="./js/example5.js"></script> -->
+    <!-- <script src="./js/example5b.js"></script> -->
+    <!-- <script src="./js/multiplications.js"></script> -->
+    <!-- <script src="./js/arrays-objects.js"></script> -->
+    <!-- <script src="./js/dom.js"></script> -->
+    <!-- <script src="./js/functions.js"></script> -->
+    <!-- <script src="./js/ejercicios.js"></script> -->
+    <!-- <script src="./js/examples-names.js"></script> -->
+    <script src="./js/events.js"></script>
 </body>
 </html>
