Add duplicateStrings function

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1 id="mainTitle" class="primera-clase"></h1>
-    <div id="myDiv">
+    <!-- <div id="myDiv">
         <h2>Subtitle</h2>
         <div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit aspernatur, sint veritatis quasi eveniet assumenda hic neque laboriosam earum labore nesciunt est deserunt et id beatae aliquid qui voluptates perspiciatis!</p>
             <br>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et ea veniam nisi recusandae beatae praesentium nobis ex perferendis cupiditate nam facere reprehenderit autem fugit laudantium optio, aliquam dolore molestias eos.</p>
         </div>
-    </div>
+    </div> -->
     <section id="sectionList">
         <h3>Primer Integrante</h3>
         <div id="list1">
@@ -32,9 +32,9 @@
         <h3>Segundo Integrante</h3>
         <div id="list2">
             <b>Primer Nombre</b>
-            <p>Ana</p>
+            <p></p>
             <b>Segundo Nombre</b>
-            <p>María</p>
+            <p>Manuel</p>
             <b>Primer Apellido</b>
             <p>Rodriguez</p>
             <b>Segundo Apellido</b>
@@ -56,7 +56,7 @@
     <!-- <script src="./js/dom.js"></script> -->
     <!-- <script src="./js/functions.js"></script> -->
     <!-- <script src="./js/ejercicios.js"></script> -->
-    <!-- <script src="./js/examples-names.js"></script> -->
-    <script src="./js/events.js"></script>
+    <script src="./js/examples-names.js"></script>
+    <!-- <script src="./js/events.js"></script> -->
 </body>
 </html>
