ADD clases example

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     <!-- <script src="./js/dom.js"></script> -->
     <!-- <script src="./js/functions.js"></script> -->
     <!-- <script src="./js/ejercicios.js"></script> -->
-    <script src="./js/examples-names.js"></script>
+    <!-- <script src="./js/examples-names.js"></script> -->
     <!-- <script src="./js/events.js"></script> -->
+    <script src="./js/clases.js"></script>
+    <script src="js/example.js"></script>
 </body>
 </html>
