ADD examples clases

--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
     <!-- <script src="./js/examples-names.js"></script> -->
     <!-- <script src="./js/events.js"></script> -->
     <script src="./js/clases.js"></script>
-    <script src="js/example.js"></script>
+    <!-- <script src="js/example.js"></script> -->
 </body>
 </html>
